# jotobot

./: .dockerignore  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  justfile  pyproject.toml  setup.cfg
.github/workflows/: delivery.yml  integration.yml
jotobot/: __init__.py  __main__.py  bot.py  command.py  event.py
jotobot/extension/: __init__.py  event.py  owner.py
